# pysysair

./: LICENSE  Makefile  README.md  pyproject.toml
codegen/: README.md  gen_code.sh  get_token.py  queries.graphql  schema.graphql
examples/: get_devices.py
pysysair/: __init__.py  auth.py  client.py  consts.py
pysysair/graphql/: __init__.py  client.py  enums.py  get_all_devices.py  input_types.py
